--- a/composer.json
+++ b/composer.json
@@ -1,16 +1,17 @@
 {
-    "name": "sumedia-wp/plugin-urlify",
+    "name": "sumedia-wordpress/urlify",
     "description": "Change sensitive URL's",
     "type": "wordpress-plugin",
     "require": {
-        "wp-cli/wp-config-transformer": "^1.2"
+        "wp-cli/wp-config-transformer": "^1.2",
+        "sumedia-wordpress/base": "master"
     },
-    "license": "GPLv3",
+    "license": "GPL-3.0-or-later",
     "authors": [
         {
             "name": "Sven Ullmann",
-            "email": "kontakt@sumedia-webdesign.de"
+            "email": "sumedia-wordpress@sumedia-webdesign.de"
         }
     ],
-    "minimum-stability": "stable"
+    "minimum-stability": "dev"
 }
